# Report-Miner

./: .gitignore  README.md  pyproject.toml
src/reportminer/: __init__.py  __main__.py  cache.py  cli.py  clipboard.py  compare.py  config.py  formatters.py  jira_client.py  models.py  parser.py  progress.py
src/reportminer/tui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_compare.py  test_config.py  test_formatters.py  test_integration.py  test_jira_client.py  test_models.py  test_parser.py  test_progress.py  test_tui.py
